objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <displayFormat>INV-{000}</displayFormat>
        <label>Invoice_Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchandise</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Merchandise__c.totalvalue__c</field>
                <operation>greaterThan</operation>
                <value>10000</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>InvoiceStatements</relationshipLabel>
        <relationshipName>InvoiceStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoicevalue1__c</fullName>
        <label>invoicevalue1</label>
        <summarizedField>LineItem__c.value1__c</summarizedField>
        <summaryForeignKey>LineItem__c.InvoiceStatement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoicevalue__c</fullName>
        <label>invoicevalue</label>
        <summarizedField>LineItem__c.value__c</summarizedField>
        <summaryForeignKey>LineItem__c.InvoiceStatement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>listitems__c</fullName>
        <label>listitems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>abc</fullName>
                    <default>true</default>
                    <label>abc</label>
                </value>
                <value>
                    <fullName>asd</fullName>
                </value>
                <value>
                    <fullName>cde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>InvoiceStatement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Status__c</columns>
        <columns>invoicevalue__c</columns>
        <columns>invoicevalue1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>InvoiceStatement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InvoiceStatements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>